Adding cruise segment - currently debugging
Co-authored-by: Gabisanth11 <Gabisanth11@users.noreply.github.com>

--- a/pyavd/gpkit_test.ipynb
+++ b/pyavd/gpkit_test.ipynb
@@ -52,184 +52,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Cost Function\n",
-      "-------------\n",
-      " M_0·T0_W0\n",
-      "\n",
-      "Constraints\n",
-      "-----------\n",
-      " Mission\n",
-      "  M_fuel/M_0 = 0.0642\n",
-      "  Takeoff\n",
-      "   \"Takeoff Parameter\":\n",
-      "     TOP = Mission.Takeoff.FL/Mission.Takeoff.k\n",
-      "   \"Lift Coeffcient | Takeoff\":\n",
-      "     CL_max_TO = 1.92\n",
-      "   \"Thrust to Weight constraint\":\n",
-      "     T0_W0 ≥ W0_S/(CL_max_TO·Mission.Takeoff.g·TOP/1.21)\n",
-      "   \"Boundaries\":\n",
-      "     \"Minimum Wing Loading\":\n",
-      "       W0_S ≥ 0.1\n",
-      "     \"Maximum Thrust to Weight\":\n",
-      "       T0_W0 ≤ 1\n",
-      "\n",
-      "  Climb\n",
-      "   \"Initial CL|Climb\":\n",
-      "     Mission.Climb.CL = 1.92\n",
-      "   \"Induced Drag Coefficient | Climb\":\n",
-      "     Mission.Climb.CDi_climb = Mission.Climb.CL²/(23.6·Mission.Climb.e_climb)\n",
-      "   \"Thrust to Weight constraint\":\n",
-      "     T0_W0 ≥ (Mission.Climb.Cd0_climb + Mission.Climb.CDi_climb)/Mission.Climb.CL + 0.001\n",
-      "   \"Boundaries\":\n",
-      "     Mission.Climb.Cd0_climb ≥ 1e-06\n",
-      "     T0_W0 ≤ 1\n",
-      "\n",
-      "  Climb_GoAround\n",
-      "   \"Go-around CL|CLimb\":\n",
-      "     Mission.Climb_GoAround.CL = 2.1\n",
-      "   \"Induced Drag Coefficient | Climb\":\n",
-      "     Mission.Climb_GoAround.CDi_climb = Mission.Climb_GoAround.CL²/(23.6·Mission.Climb_GoAround.e_climb)\n",
-      "   \"Thrust to Weight constraint\":\n",
-      "     T0_W0 ≥ (Mission.Climb_GoAround.Cd0_climb + Mission.Climb_GoAround.CDi_climb)/Mission.Climb_GoAround.CL + 0.001\n",
-      "   \"Boundaries\":\n",
-      "     Mission.Climb_GoAround.Cd0_climb ≥ 1e-06\n",
-      "     T0_W0 ≤ 1\n",
-      "\n",
-      "  Landing\n",
-      "   \"Target Stall Speed\":\n",
-      "     V_stall = (Mission.Landing.FL/Mission.Landing.k)^0.5\n",
-      "   \"Max Wing Loading\":\n",
-      "     W0_S ≤ 0.5·SL_density·V_stall²·2.1\n",
-      "\n",
-      " Aircraft\n",
-      "  \"Dry Mass\":\n",
-      "    M_dry ≥ M\n",
-      "  \"Total Mass\":\n",
-      "    M_0 ≥ M_fuel + M_dry\n",
-      "  \"Boundary Constraints\":\n",
-      "    \"Minimum Fuel Mass\":\n",
-      "      M_fuel ≥ 100\n",
-      "    \"Total Mass Boundaries\":\n",
-      "      M_0 ≤ 1e+05\n",
-      "      M_0 ≥ 100\n",
-      "  Payload\n",
-      "   \"Passengers + Crew Mass\":\n",
-      "     M_pax = m_pax·6\n",
-      "   \"Luggage Mass\":\n",
-      "     M_luggage = m_luggage·4\n",
-      "   \"Total Payload\":\n",
-      "     M ≥ M_pax + M_luggage\n",
-      "Using solver 'cvxopt'\n",
-      " for 17 free variables\n",
-      "  in 37 posynomial inequalities.\n",
-      "Solving took 0.0881 seconds.\n",
-      "\n",
-      "Optimal Cost\n",
-      "------------\n",
-      " 147.6\n",
-      "\n",
-      "~~~~~~~~\n",
-      "WARNINGS\n",
-      "~~~~~~~~\n",
-      "Unexpectedly Loose Constraints\n",
-      "------------------------------\n",
-      "              | Aircraft\n",
-      "1147 >= 901.2 : M_dry ≥ M\n",
-      " 1557 >= 1247 : M_0 ≥ M_fuel + M_dry\n",
-      "\n",
-      "              | Aircraft.Payload\n",
-      " 901.2 >= 708 : M ≥ M_pax + M_luggage\n",
-      "~~~~~~~~\n",
-      "\n",
-      "Model Sensitivities (sorts models in sections below)\n",
-      "-------------------\n",
-      "  +4.0 : Mission.Climb_GoAround\n",
-      "  +1.0 : Aircraft\n",
-      "       : Mission\n",
-      " <1e-9 : Mission.Climb\n",
-      "<1e-10 : Aircraft.Payload\n",
-      "       : Mission.Takeoff\n",
-      "<1e-11 : Mission.Landing\n",
-      "\n",
-      "Free Variables\n",
-      "--------------\n",
-      "          | Mission.Climb_GoAround\n",
-      "CDi_climb : 0.197             Induced Drag Coefficient | Climb\n",
-      "       CL : 2.1               Lift Coefficient | Climb\n",
-      "Cd0_climb : 1e-06             Variation in Cd0\n",
-      "\n",
-      "          | Aircraft\n",
-      "      M_0 : 1557      [kg]    Total Mass\n",
-      "    M_dry : 1147      [kg]    Aircraft Dry Mass\n",
-      "   M_fuel : 100       [kg]    Starting Fuel Mass\n",
-      "    T0_W0 : 0.09482           Design Thrust to Weight ratio\n",
-      "     W0_S : 6.072     [N/m²]  Design Wing Loading\n",
-      "\n",
-      "          | Mission.Climb\n",
-      "CDi_climb : 0.1647            Induced Drag Coefficient | Climb\n",
-      "       CL : 1.92              Lift Coefficient | Climb\n",
-      "Cd0_climb : 0.001811          Variation in Cd0\n",
-      "\n",
-      "          | Aircraft.Payload\n",
-      "        M : 901.2     [kg]    Total Payload mass\n",
-      "M_luggage : 108       [kg]    Total Mass of luggage\n",
-      "    M_pax : 600       [kg]    Total Mass of passengers + crew\n",
-      "\n",
-      "          | Mission.Takeoff\n",
-      "CL_max_TO : 1.92              Maximum Lift Coefficient | Takeoff\n",
-      "      TOP : 512.6     [kg/m²] Takeoff Parameter\n",
-      "\n",
-      "          | Mission.Landing\n",
-      "  V_stall : 45.04     [m/s]   Target Stall Speed | Landing\n",
-      "\n",
-      "Fixed Variables\n",
-      "---------------\n",
-      "           | Mission.Climb_GoAround\n",
-      "   e_climb : 0.95             Variation in Oswald efficiency\n",
-      "\n",
-      "           | Aircraft\n",
-      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
-      "\n",
-      "           | Mission.Climb\n",
-      "   e_climb : 0.95             Variation in Oswald efficiency\n",
-      "\n",
-      "           | Aircraft.Payload\n",
-      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
-      " m_luggage : 27      [kg]     Assumed Luggage Weight\n",
-      "     m_pax : 100     [kg]     Assumed Passenger Weight\n",
-      "\n",
-      "           | Mission.Takeoff\n",
-      "        FL : 1200    [m]      Field Length\n",
-      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
-      "         k : 37.5    [ft³/lb] Some Random Constant\n",
-      "\n",
-      "           | Mission.Landing\n",
-      "        FL : 1200    [m]      Field Length | Landing\n",
-      "SL_density : 1.225   [kg/m³]  Sea Level Density | Landing\n",
-      "         k : 0.5136  [ft/kt²] Landing Empirical Constant\n",
-      "\n",
-      "Variable Sensitivities\n",
-      "----------------------\n",
-      "        | Mission.Climb_GoAround\n",
-      "e_climb : -0.99  Variation in Oswald efficiency\n",
-      "\n",
-      "Most Sensitive Constraints\n",
-      "--------------------------\n",
-      "       | Aircraft\n",
-      "    +1 : M_fuel ≥ 100\n",
-      "\n",
-      "       | Mission\n",
-      "    +1 : M_fuel/M_0 = 0.0642\n",
-      "\n",
-      "       | Mission.Climb_GoAround\n",
-      "    +1 : T0_W0 ≥ (.Cd0_climb + .CDi_climb)/.CL + 0.001\n",
-      " +0.99 : .CDi_climb = .CL²/(23.6·.e_climb)\n",
-      " +0.99 : .CL = 2.1\n",
-      "\n"
+     "ename": "AttributeError",
+     "evalue": "`M` is noted in Aircraft as unbounded, but is not an attribute of that model.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m~/anaconda3/envs/RocketPy/lib/python3.8/site-packages/gpkit/tools/docstring.py\u001b[0m in \u001b[0;36mexpected_unbounded\u001b[0;34m(instance, doc)\u001b[0m\n\u001b[1;32m     44\u001b[0m                     \u001b[0;32mfor\u001b[0m \u001b[0msubdot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m                         \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubdot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m                     \u001b[0mvariables\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Aircraft' object has no attribute 'M'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_114412/1457364732.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mAC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAircraft\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# print(AC)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mMISSION\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMission\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# print(MISSION)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/RocketPy/lib/python3.8/site-packages/gpkit/constraints/model.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, cost, constraints, *args, **kwargs)\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlineage\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdocstr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"SKIP VERIFICATION\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdocstr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;34m\"Unbounded\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdocstr\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m\"Bounded by\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdocstr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mverify_docstring\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m     \u001b[0mgp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprogify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGeometricProgram\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/RocketPy/lib/python3.8/site-packages/gpkit/constraints/model.py\u001b[0m in \u001b[0;36mverify_docstring\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0mbounded\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmeq_bounded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbounded\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmeq_bounded\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__doc__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m         \u001b[0mexp_unbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexpected_unbounded\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m         \u001b[0munexp_bounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbounded\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp_unbounds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0munexp_bounds\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# anything bounded that shouldn't be? err!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/RocketPy/lib/python3.8/site-packages/gpkit/tools/docstring.py\u001b[0m in \u001b[0;36mexpected_unbounded\u001b[0;34m(instance, doc)\u001b[0m\n\u001b[1;32m     46\u001b[0m                     \u001b[0mvariables\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m                     raise AttributeError(\"`%s` is noted in %s as \"\n\u001b[0m\u001b[1;32m     49\u001b[0m                                          \u001b[0;34m\"unbounded, but is not \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m                                          \u001b[0;34m\"an attribute of that model.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: `M` is noted in Aircraft as unbounded, but is not an attribute of that model."
      ]
     }
    ],
@@ -251,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
