--- a/pyavd/gpkit_test.ipynb
+++ b/pyavd/gpkit_test.ipynb
@@ -55,23 +55,299 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LD: Mission.Cruise.LD, c: Aircraft.Starboard_Engine.sfc_cruise [1/hr], R: Mission.Cruise.R [km], V_inf: Mission.Cruise.V_inf [m/s]\n",
-      "Mission.Cruise.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise.V_inf·Mission.Cruise.LD)\n",
-      "LD: Mission.Cruise1.LD, c: Aircraft.Starboard_Engine.sfc_cruise [1/hr], R: Mission.Cruise1.R [km], V_inf: Mission.Cruise1.V_inf [m/s]\n",
-      "Mission.Cruise1.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise1.V_inf·Mission.Cruise1.LD)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'int' and 'Posynomial'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_160419/1457364732.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# print(AC)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mMISSION\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMission\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;31m# print(MISSION)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/RocketPy/lib/python3.8/site-packages/gpkit/constraints/model.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, cost, constraints, *args, **kwargs)\u001b[0m\n\u001b[1;32m     51\u001b[0m                 args = tuple(arg for arg in [cost, constraints]\n\u001b[1;32m     52\u001b[0m                              if arg is not None) + args\n\u001b[0;32m---> 53\u001b[0;31m                 \u001b[0mcs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=no-member\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m                 if (isinstance(cs, tuple) and len(cs) == 2\n\u001b[1;32m     55\u001b[0m                         and isinstance(cs[1], dict)):\n",
-      "\u001b[0;32m~/Documents/GitHub/PyAVD/pyavd/Models/Performance/Mission.py\u001b[0m in \u001b[0;36msetup\u001b[0;34m(self, aircraft)\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0;31m# Aggregate fuel fraction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0maggregate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mfs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfuel_frac\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfs\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmission\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0mconstraints\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0maircraft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mM_fuel\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0maircraft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mM_0\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1.01\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0maggregate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mconstraints\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmission\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'int' and 'Posynomial'"
+      "\n",
+      "Cost Function\n",
+      "-------------\n",
+      " M_0\n",
+      "\n",
+      "Constraints\n",
+      "-----------\n",
+      " Mission\n",
+      "  \"Top-level constraints\":\n",
+      "    M[0] = M_0\n",
+      "    M[1] ≤ M[0]\n",
+      "    M[2] ≤ M[1]\n",
+      "    M[3] ≤ M[2]\n",
+      "    M[4] ≤ M[3]\n",
+      "    M[5] ≤ M[4]\n",
+      "    M[6] ≤ M[5]\n",
+      "    M[6] ≥ M_dry\n",
+      "    M[0] ≥ M[6] + M_fuel/1.01\n",
+      "  Takeoff\n",
+      "   \"Takeoff Parameter\":\n",
+      "     TOP = Mission.Takeoff.FL/Mission.Takeoff.k\n",
+      "   \"Lift Coeffcient | Takeoff\":\n",
+      "     CL_max_TO = 1.92\n",
+      "   \"Thrust to Weight constraint\":\n",
+      "     T0_W0 ≥ W0_S/(CL_max_TO·Mission.Takeoff.g·TOP/1.21)\n",
+      "   \"Fuel Fraction | Takeoff\":\n",
+      "     M[1]/M[0] ≥ 0.97\n",
+      "   \"Boundaries\":\n",
+      "     \"Minimum Wing Loading\":\n",
+      "       W0_S ≥ 0.1\n",
+      "     \"Maximum Thrust to Weight\":\n",
+      "       T0_W0 ≤ 1\n",
+      "\n",
+      "  Climb\n",
+      "   \"Initial CL|Climb\":\n",
+      "     Mission.Climb.CL = 1.92\n",
+      "   \"Induced Drag Coefficient | Climb\":\n",
+      "     Mission.Climb.CDi_climb = Mission.Climb.CL²/(23.6·Mission.Climb.e_climb)\n",
+      "   \"Thrust to Weight constraint\":\n",
+      "     T0_W0 ≥ (Mission.Climb.Cd0_climb + Mission.Climb.CDi_climb)/Mission.Climb.CL + 0.001\n",
+      "   \"Fuel Fraction | Climb\":\n",
+      "     M[2]/M[1] ≥ 0.985\n",
+      "   \"Boundaries\":\n",
+      "     Mission.Climb.Cd0_climb ≥ 1e-06\n",
+      "     T0_W0 ≤ 1\n",
+      "\n",
+      "  Cruise\n",
+      "   \"Thrust Lapse Troposphere\":\n",
+      "     Mission.Cruise.beta = Mission.Cruise.sigma^0.7\n",
+      "   \"Thrust to Weight Constraint | Cruise\":\n",
+      "     T0_W0 ≥ 0.955/Mission.Cruise.beta·(1/Mission.Cruise.V_inf·Mission.Cruise.climb_rate + 0.5·Mission.Cruise.rho·Mission.Cruise.V_inf²·Cd0/(0.955·W0_S) + 0.955·W0_S/(0.5·Mission.Cruise.rho·Mission.Cruise.V_inf²·π·7.5·0.9))\n",
+      "   \"Optimum LD\":\n",
+      "     Mission.Cruise.LD = 0.866·LD_max\n",
+      "   \"Fuel Fraction | Cruise\":\n",
+      "     M[3]/M[2] ≥ (Mission.Cruise.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise.V_inf·Mission.Cruise.LD))^1 + (Mission.Cruise.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise.V_inf·Mission.Cruise.LD))²/2 + (Mission.Cruise.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise.V_inf·Mission.Cruise.LD))³/6 + (Mission.Cruise.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise.V_inf·Mission.Cruise.LD))⁴/24\n",
+      "\n",
+      "  Climb_GoAround\n",
+      "   \"Go-around CL|CLimb\":\n",
+      "     Mission.Climb_GoAround.CL = 2.1\n",
+      "   \"Induced Drag Coefficient | Climb\":\n",
+      "     Mission.Climb_GoAround.CDi_climb = Mission.Climb_GoAround.CL²/(23.6·Mission.Climb_GoAround.e_climb)\n",
+      "   \"Thrust to Weight constraint\":\n",
+      "     T0_W0 ≥ (Mission.Climb_GoAround.Cd0_climb + Mission.Climb_GoAround.CDi_climb)/Mission.Climb_GoAround.CL + 0.001\n",
+      "   \"Fuel Fraction | Climb\":\n",
+      "     M[4]/M[3] ≥ 0.985\n",
+      "   \"Boundaries\":\n",
+      "     Mission.Climb_GoAround.Cd0_climb ≥ 1e-06\n",
+      "     T0_W0 ≤ 1\n",
+      "\n",
+      "  Cruise1\n",
+      "   \"Thrust Lapse Troposphere\":\n",
+      "     Mission.Cruise1.beta = Mission.Cruise1.sigma^0.7\n",
+      "   \"Thrust to Weight Constraint | Cruise\":\n",
+      "     T0_W0 ≥ 0.955/Mission.Cruise1.beta·(1/Mission.Cruise1.V_inf·Mission.Cruise1.climb_rate + 0.5·Mission.Cruise1.rho·Mission.Cruise1.V_inf²·Cd0/(0.955·W0_S) + 0.955·W0_S/(0.5·Mission.Cruise1.rho·Mission.Cruise1.V_inf²·π·7.5·0.9))\n",
+      "   \"Optimum LD\":\n",
+      "     Mission.Cruise1.LD = 0.866·LD_max\n",
+      "   \"Fuel Fraction | Cruise\":\n",
+      "     M[5]/M[4] ≥ (Mission.Cruise1.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise1.V_inf·Mission.Cruise1.LD))^1 + (Mission.Cruise1.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise1.V_inf·Mission.Cruise1.LD))²/2 + (Mission.Cruise1.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise1.V_inf·Mission.Cruise1.LD))³/6 + (Mission.Cruise1.R·Aircraft.Starboard_Engine.sfc_cruise/(Mission.Cruise1.V_inf·Mission.Cruise1.LD))⁴/24\n",
+      "\n",
+      "  Landing\n",
+      "   \"Target Stall Speed\":\n",
+      "     V_stall = (Mission.Landing.FL/Mission.Landing.k)^0.5\n",
+      "   \"Max Wing Loading\":\n",
+      "     W0_S ≤ 0.5·SL_density·V_stall²·2.1\n",
+      "   \"Fuel Fraction | Cruise\":\n",
+      "     M[6]/M[5] ≥ 0.995\n",
+      "\n",
+      " Aircraft\n",
+      "  \"Dry Mass\":\n",
+      "    M_dry ≥ Aircraft.Payload.M + Aircraft.Port_Engine.M + Aircraft.Starboard_Engine.M\n",
+      "  \"Total Mass\":\n",
+      "    M_0 ≥ M_fuel + M_dry\n",
+      "  \"LDmax ratio (approx)\":\n",
+      "    LD_max = K_LD·(7.5/Sw_Sref)^0.5\n",
+      "  \"Boundary Constraints\":\n",
+      "    \"Minimum Fuel Mass\":\n",
+      "      M_fuel ≥ 100\n",
+      "    \"Total Mass Boundaries\":\n",
+      "      M_0 ≤ 1e+05\n",
+      "      M_0 ≥ 100\n",
+      "    \"Minimum Cd0\":\n",
+      "      Cd0 ≥ 1e-06\n",
+      "  Payload\n",
+      "   \"Passengers + Crew Mass\":\n",
+      "     M_pax = m_pax·6\n",
+      "   \"Luggage Mass\":\n",
+      "     M_luggage = m_luggage·4\n",
+      "   \"Total Payload\":\n",
+      "     Aircraft.Payload.M ≥ M_pax + M_luggage\n",
+      "\n",
+      "  Starboard_Engine\n",
+      "   (no constraints)\n",
+      "\n",
+      "  Port_Engine\n",
+      "   (no constraints)\n",
+      "Using solver 'cvxopt'\n",
+      " for 30 free variables\n",
+      "  in 64 posynomial inequalities.\n",
+      "Solving took 0.2 seconds.\n",
+      "\n",
+      "Optimal Cost\n",
+      "------------\n",
+      " 3808\n",
+      "\n",
+      "~~~~~~~~\n",
+      "WARNINGS\n",
+      "~~~~~~~~\n",
+      "Unexpectedly Loose Constraints\n",
+      "------------------------------\n",
+      "                 | Mission.Cruise1\n",
+      "0.9949 >= 0.1993 : M[5]/M[4] ≥ (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))^1\n",
+      "                     + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))²/2\n",
+      "                     + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))³/6\n",
+      "                     + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁴/24\n",
+      "\n",
+      "                 | Mission.Cruise\n",
+      "0.9949 >= 0.1993 : M[3]/M[2] ≥ (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))^1\n",
+      "                     + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))²/2\n",
+      "                     + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))³/6\n",
+      "                     + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁴/24\n",
+      "\n",
+      "                 | Mission.Takeoff\n",
+      "   0.994 >= 0.97 : M[1]/M[0] ≥ 0.97\n",
+      "\n",
+      "                 | Mission.Climb_GoAround\n",
+      " 0.9957 >= 0.985 : M[4]/M[3] ≥ 0.985\n",
+      "\n",
+      "                 | Mission.Climb\n",
+      " 0.9957 >= 0.985 : M[2]/M[1] ≥ 0.985\n",
+      "\n",
+      "                 | Mission.Landing\n",
+      " 0.9984 >= 0.995 : M[6]/M[5] ≥ 0.995\n",
+      "~~~~~~~~\n",
+      "\n",
+      "Model Sensitivities (sorts models in sections below)\n",
+      "-------------------\n",
+      "  +2.0 : Aircraft\n",
+      "  +0.6 : Aircraft.Payload\n",
+      "  +0.4 : Aircraft.Port_Engine\n",
+      "       : Aircraft.Starboard_Engine\n",
+      " <1e-6 : Mission\n",
+      " <1e-7 : Mission.Landing\n",
+      "       : Mission.Climb_GoAround\n",
+      "       : Mission.Climb\n",
+      " <1e-8 : Mission.Takeoff\n",
+      " <1e-9 : Mission.Cruise1\n",
+      "       : Mission.Cruise\n",
+      "\n",
+      "Free Variables\n",
+      "--------------\n",
+      "          | Aircraft\n",
+      "      Cd0 : 9.214e-06             Zero-lift drag coefficient\n",
+      "   LD_max : 17.33                 Maximum Lift to Drag ratio\n",
+      "      M_0 : 3808          [kg]    Total Mass\n",
+      "    M_dry : 3708          [kg]    Aircraft Dry Mass\n",
+      "   M_fuel : 100           [kg]    Starting Fuel Mass\n",
+      "    T0_W0 : 0.2762                Design Thrust to Weight ratio\n",
+      "     W0_S : 75.38         [N/m²]  Design Wing Loading\n",
+      "\n",
+      "          | Aircraft.Payload\n",
+      "        M : 708           [kg]    Total Payload mass\n",
+      "M_luggage : 108           [kg]    Total Mass of luggage\n",
+      "    M_pax : 600           [kg]    Total Mass of passengers + crew\n",
+      "\n",
+      "          | Mission\n",
+      "        M : [ 3.81e+03    [kg]    Mass at end of each segment\n",
+      "              3.79e+03\n",
+      "              3.77e+03\n",
+      "              3.75e+03\n",
+      "              3.73e+03\n",
+      "              3.71e+03\n",
+      "              3.71e+03  ]\n",
+      "\n",
+      "          | Mission.Landing\n",
+      "  V_stall : 45.04         [m/s]   Target Stall Speed | Landing\n",
+      "\n",
+      "          | Mission.Climb_GoAround\n",
+      "CDi_climb : 0.197                 Induced Drag Coefficient | Climb\n",
+      "       CL : 2.1                   Lift Coefficient | Climb\n",
+      "Cd0_climb : 0.0214                Variation in Cd0\n",
+      "\n",
+      "          | Mission.Climb\n",
+      "CDi_climb : 0.1647                Induced Drag Coefficient | Climb\n",
+      "       CL : 1.92                  Lift Coefficient | Climb\n",
+      "Cd0_climb : 0.01731               Variation in Cd0\n",
+      "\n",
+      "          | Mission.Takeoff\n",
+      "CL_max_TO : 1.92                  Maximum Lift Coefficient | Takeoff\n",
+      "      TOP : 512.6         [kg/m²] Takeoff Parameter\n",
+      "\n",
+      "          | Mission.Cruise1\n",
+      "       LD : 15.01                 Optimum Lift-Drag | Cruise\n",
+      "     beta : 0.3747                Thrust Lapse\n",
+      "\n",
+      "          | Mission.Cruise\n",
+      "       LD : 15.01                 Optimum Lift-Drag | Cruise\n",
+      "     beta : 0.3747                Thrust Lapse\n",
+      "\n",
+      "Fixed Variables\n",
+      "---------------\n",
+      "           | Aircraft\n",
+      "      K_LD : 15.5             K_LD empirical coefficient | Civil Jets\n",
+      "   Sw_Sref : 6                Wetted Area to Reference Area ratio\n",
+      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
+      "\n",
+      "           | Aircraft.Payload\n",
+      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
+      " m_luggage : 27      [kg]     Assumed Luggage Weight\n",
+      "     m_pax : 100     [kg]     Assumed Passenger Weight\n",
+      "\n",
+      "           | Aircraft.Starboard_Engine\n",
+      "         M : 1500    [kg]     Mass\n",
+      "sfc_cruise : 0.8     [1/hr]   Specific Fuel Consumption at Cruise\n",
+      "sfc_loiter : 0.7     [1/hr]   Specific Fuel Consumption at Loiter\n",
+      "\n",
+      "           | Aircraft.Port_Engine\n",
+      "         M : 1500    [kg]     Mass\n",
+      "sfc_cruise : 0.8     [1/hr]   Specific Fuel Consumption at Cruise\n",
+      "sfc_loiter : 0.7     [1/hr]   Specific Fuel Consumption at Loiter\n",
+      "\n",
+      "           | Mission.Landing\n",
+      "        FL : 1200    [m]      Field Length | Landing\n",
+      "SL_density : 1.225   [kg/m³]  Sea Level Density | Landing\n",
+      "         k : 0.5136  [ft/kt²] Landing Empirical Constant\n",
+      "\n",
+      "           | Mission.Climb_GoAround\n",
+      "   e_climb : 0.95             Variation in Oswald efficiency\n",
+      "\n",
+      "           | Mission.Climb\n",
+      "   e_climb : 0.95             Variation in Oswald efficiency\n",
+      "\n",
+      "           | Mission.Takeoff\n",
+      "        FL : 1200    [m]      Field Length\n",
+      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
+      "         k : 37.5    [ft³/lb] Some Random Constant\n",
+      "\n",
+      "           | Mission.Cruise1\n",
+      "         R : 2700    [km]     Cruise Range\n",
+      "     V_inf : 220     [m/s]    Cruising Velocity\n",
+      "       alt : 4e+04   [ft]     Altitude\n",
+      "       rho : 1.22    [kg/m³]  Density\n",
+      "     sigma : 0.246            Aggregate fuel fraction\n",
+      "\n",
+      "           | Mission.Cruise\n",
+      "         R : 2700    [km]     Cruise Range\n",
+      "     V_inf : 220     [m/s]    Cruising Velocity\n",
+      "       alt : 4e+04   [ft]     Altitude\n",
+      "       rho : 1.22    [kg/m³]  Density\n",
+      "     sigma : 0.246            Aggregate fuel fraction\n",
+      "\n",
+      "Variable Sensitivities\n",
+      "----------------------\n",
+      "          | Aircraft.Payload\n",
+      "    m_pax : +0.16   Assumed Passenger Weight\n",
+      "m_luggage : +0.028  Assumed Luggage Weight\n",
+      "\n",
+      "          | Aircraft.Port_Engine\n",
+      "        M : +0.39   Mass\n",
+      "\n",
+      "          | Aircraft.Starboard_Engine\n",
+      "        M : +0.39   Mass\n",
+      "\n",
+      "Most Sensitive Constraints\n",
+      "--------------------------\n",
+      "       | Aircraft\n",
+      "    +1 : M_0 ≥ M_fuel + M_dry\n",
+      " +0.97 : M_dry ≥ .Payload.M + .Port_Engine.M + .Starboard_Engine.M\n",
+      "\n",
+      "       | Aircraft.Payload\n",
+      " +0.19 : .M ≥ M_pax + M_luggage\n",
+      " +0.16 : M_pax = m_pax·6\n",
+      "+0.028 : M_luggage = m_luggage·4\n",
+      "\n"
      ]
     }
    ],
@@ -84,7 +360,7 @@
     "# print(MISSION)\n",
     "\n",
     "# M = Model(AC.M_0 * AC.T0_W0, [Bounded(MISSION), Bounded(AC)])\n",
-    "M = Model(AC.M_0 * AC.T0_W0, [MISSION, AC])\n",
+    "M = Model(AC.M_0, [MISSION, AC])\n",
     "print(M)\n",
     "\n",
     "sol = M.solve(verbosity=1)\n",
@@ -93,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
