just syncing useless edits....

--- a/pyavd/gpkit_test.ipynb
+++ b/pyavd/gpkit_test.ipynb
@@ -58,21 +58,20 @@
       "\n",
       "Cost Function\n",
       "-------------\n",
-      " M_fuel\n",
+      " M_0\n",
       "\n",
       "Constraints\n",
       "-----------\n",
       " Mission\n",
       "  \"Top-level constraints\":\n",
-      "    M[0] ≥ M_fuel + Aircraft.Payload.M + Aircraft.Port_Engine.M + Aircraft.Starboard_Engine.M\n",
+      "    M[0] = M_0\n",
       "    M[1] ≤ M[0]\n",
       "    M[2] ≤ M[1]\n",
       "    M[3] ≤ M[2]\n",
       "    M[4] ≤ M[3]\n",
       "    M[5] ≤ M[4]\n",
       "    M[6] ≤ M[5]\n",
-      "    M[6] ≥ Aircraft.Payload.M + Aircraft.Port_Engine.M + Aircraft.Starboard_Engine.M\n",
-      "    M[6] ≥ (Aircraft.Payload.M + Aircraft.Port_Engine.M + Aircraft.Starboard_Engine.M)·1.06\n",
+      "    M[6] ≥ M_dry·1.06\n",
       "  Takeoff\n",
       "   \"Takeoff Parameter\":\n",
       "     TOP = Mission.Takeoff.FL/Mission.Takeoff.k\n",
@@ -139,10 +138,14 @@
       "     V_stall = (Mission.Landing.FL/Mission.Landing.k)^0.5\n",
       "   \"Max Wing Loading\":\n",
       "     W0_S ≤ 0.5·SL_density·V_stall²·2.1\n",
-      "   \"Fuel Fraction | Cruise\":\n",
+      "   \"Fuel Fraction | Landing\":\n",
       "     M[6]/M[5] = 0.995\n",
       "\n",
       " Aircraft\n",
+      "  \"Dry Mass\":\n",
+      "    M_dry ≥ Aircraft.Payload.M + Aircraft.Port_Engine.M + Aircraft.Starboard_Engine.M\n",
+      "  \"Total Mass\":\n",
+      "    M_0 ≥ M_fuel + M_dry\n",
       "  \"LDmax ratio (approx)\":\n",
       "    LD_max = K_LD·(7.5/Sw_Sref)^0.5\n",
       "  \"Boundary Constraints\":\n",
@@ -175,9 +178,9 @@
     "MISSION = Mission(AC)\n",
     "# print(MISSION)\n",
     "\n",
-    "# M = Model(AC.M_0 * AC.T0_W0, [Bounded(MISSION), Bounded(AC)])\n",
+    "# M = Model(AC.M_fuel, [Bounded(MISSION), Bounded(AC)])\n",
     "# M = Model(AC.T0_W0 * AC.M_0, [MISSION, AC])\n",
-    "M = Model(AC.M_fuel, [MISSION, AC])\n",
+    "M = Model(AC.M_0, [MISSION, AC])\n",
     "print(M)\n"
    ]
   },
@@ -195,47 +198,47 @@
        "data": [
         {
          "ids": [
-          "Aircraft.Port_Engine",
-          "Mission.Climb",
-          "Mission.Cruise",
           "Aircraft.Payload",
-          "Mission.Climb_GoAround",
-          "Mission",
-          "Aircraft.Starboard_Engine",
-          "Aircraft",
-          "Mission.Takeoff",
-          "Mission.Landing",
           "Mission.Cruise1",
+          "Aircraft.Port_Engine",
+          "Aircraft",
+          "Mission.Cruise",
+          "Mission.Takeoff",
+          "Mission.Climb_GoAround",
+          "Mission.Climb",
+          "Mission",
+          "Mission.Landing",
+          "Aircraft.Starboard_Engine",
           "Model",
           ""
          ],
          "labels": [
-          "Port_Engine",
-          "Climb",
-          "Cruise",
           "Payload",
-          "Climb_GoAround",
-          "Mission",
-          "Starboard_Engine",
-          "Aircraft",
-          "Takeoff",
-          "Landing",
           "Cruise1",
+          "Port_Engine",
+          "Aircraft",
+          "Cruise",
+          "Takeoff",
+          "Climb_GoAround",
+          "Climb",
+          "Mission",
+          "Landing",
+          "Starboard_Engine",
           "Model",
           ""
          ],
          "parents": [
           "Aircraft",
           "Mission",
-          "Mission",
-          "Aircraft",
-          "Mission",
-          "Model",
           "Aircraft",
           "Model",
           "Mission",
           "Mission",
           "Mission",
+          "Mission",
+          "Model",
+          "Mission",
+          "Aircraft",
           "",
           "Model"
          ],
@@ -1082,106 +1085,91 @@
      "output_type": "stream",
      "text": [
       "Using solver 'cvxopt'\n",
-      " for 28 free variables\n",
-      "  in 64 posynomial inequalities.\n",
-      "Solving took 0.244 seconds.\n",
+      " for 30 free variables\n",
+      "  in 66 posynomial inequalities.\n",
+      "Solving took 0.137 seconds.\n",
+      "Solution check warning: Primal solution violates constraint: 1.0152284273202685 is greater than 1\n",
       "\n",
       "Optimal Cost\n",
       "------------\n",
-      " 10\n",
+      " 5947\n",
       "\n",
       "~~~~~~~~\n",
       "WARNINGS\n",
       "~~~~~~~~\n",
+      "Solution Inconsistency\n",
+      "----------------------\n",
+      "Primal solution violates constraint: 1.0152284273202685 is greater than 1\n",
+      "\n",
       "Unexpectedly Loose Constraints\n",
       "------------------------------\n",
-      "               | Aircraft.Payload\n",
-      "   1725 >= 708 : .M ≥ M_pax + M_luggage\n",
-      "\n",
-      "               | Mission.Cruise1\n",
-      "2.538 >= 1.199 : M[4]/M[5] ≥ 1 + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))^1\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))²/2\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))³/6\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁴/24\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁵/120\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁶/720\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁷/5.04e+03\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁸/4.03e+04\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁹/3.63e+05\n",
-      "\n",
-      "               | Mission.Cruise\n",
-      "2.538 >= 1.199 : M[2]/M[3] ≥ 1 + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))^1\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))²/2\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))³/6\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁴/24\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁵/120\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁶/720\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁷/5.04e+03\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁸/4.03e+04\n",
-      "                   + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁹/3.63e+05\n",
+      "             | Aircraft\n",
+      "5947 >= 4333 : M_0 ≥ M_fuel + M_dry\n",
       "~~~~~~~~\n",
       "\n",
       "Model Sensitivities (sorts models in sections below)\n",
       "-------------------\n",
-      "  +1.0 : Aircraft\n",
-      " <1e-4 : Mission\n",
+      "  +3.0 : Mission\n",
+      "  +1.9 : Aircraft\n",
+      "  +1.5 : Mission.Cruise\n",
+      "       : Mission.Cruise1\n",
+      "  +1.0 : Mission.Climb_GoAround\n",
       "       : Mission.Landing\n",
-      " <1e-5 : Mission.Climb_GoAround\n",
-      "       : Mission.Climb\n",
       "       : Mission.Takeoff\n",
-      " <1e-7 : Mission.Cruise1\n",
-      "       : Mission.Cruise\n",
-      "       : Aircraft.Payload\n",
-      " <1e-8 : Aircraft.Starboard_Engine\n",
-      " <1e-9 : Aircraft.Port_Engine\n",
+      "  +0.8 : Aircraft.Starboard_Engine\n",
+      "  +0.6 : Aircraft.Payload\n",
+      "  +0.4 : Aircraft.Port_Engine\n",
+      " <1e-7 : Mission.Climb\n",
       "\n",
       "Free Variables\n",
       "--------------\n",
-      "          | Aircraft\n",
-      "      Cd0 : 1.937e-05             Zero-lift drag coefficient\n",
-      "   LD_max : 17.33                 Maximum Lift to Drag ratio\n",
-      "   M_fuel : 10            [kg]    Starting Fuel Mass\n",
-      "    T0_W0 : 0.2225                Design Thrust to Weight ratio\n",
-      "     W0_S : 38.22         [N/m²]  Design Wing Loading\n",
-      "\n",
       "          | Mission\n",
-      "        M : [ 7.42e+04    [kg]    Mass at end of each segment\n",
-      "              7.2e+04\n",
-      "              7.09e+04\n",
-      "              2.79e+04\n",
-      "              2.75e+04\n",
-      "              1.08e+04\n",
-      "              1.08e+04  ]\n",
+      "        M : [ 5.95e+03    [kg]    Mass at end of each segment\n",
+      "              5.77e+03\n",
+      "              5.77e+03\n",
+      "              4.81e+03\n",
+      "              4.74e+03\n",
+      "              3.95e+03\n",
+      "              3.93e+03  ]\n",
       "\n",
-      "          | Mission.Landing\n",
-      "  V_stall : 45.04         [m/s]   Target Stall Speed | Landing\n",
-      "\n",
-      "          | Mission.Climb_GoAround\n",
-      "CDi_climb : 0.197                 Induced Drag Coefficient | Climb\n",
-      "       CL : 2.1                   Lift Coefficient | Climb\n",
-      "Cd0_climb : 0.0001003             Variation in Cd0\n",
-      "\n",
-      "          | Mission.Climb\n",
-      "CDi_climb : 0.1647                Induced Drag Coefficient | Climb\n",
-      "       CL : 1.92                  Lift Coefficient | Climb\n",
-      "Cd0_climb : 9.39e-05              Variation in Cd0\n",
-      "\n",
-      "          | Mission.Takeoff\n",
-      "CL_max_TO : 1.92                  Maximum Lift Coefficient | Takeoff\n",
-      "      TOP : 512.6         [kg/m²] Takeoff Parameter\n",
-      "\n",
-      "          | Mission.Cruise1\n",
-      "       LD : 15.01                 Optimum Lift-Drag | Cruise\n",
-      "     beta : 0.3747                Thrust Lapse\n",
+      "          | Aircraft\n",
+      "      Cd0 : 1.571e-05             Zero-lift drag coefficient\n",
+      "   LD_max : 17.33                 Maximum Lift to Drag ratio\n",
+      "      M_0 : 5947          [kg]    Total Mass\n",
+      "    M_dry : 3708          [kg]    Aircraft Dry Mass\n",
+      "   M_fuel : 624.9         [kg]    Starting Fuel Mass\n",
+      "    T0_W0 : 0.2522                Design Thrust to Weight ratio\n",
+      "     W0_S : 44.82         [N/m²]  Design Wing Loading\n",
       "\n",
       "          | Mission.Cruise\n",
       "       LD : 15.01                 Optimum Lift-Drag | Cruise\n",
       "     beta : 0.3747                Thrust Lapse\n",
       "\n",
+      "          | Mission.Cruise1\n",
+      "       LD : 15.01                 Optimum Lift-Drag | Cruise\n",
+      "     beta : 0.3747                Thrust Lapse\n",
+      "\n",
+      "          | Mission.Takeoff\n",
+      "CL_max_TO : 1.92                  Maximum Lift Coefficient | Takeoff\n",
+      "      TOP : 512.6         [kg/m²] Takeoff Parameter\n",
+      "\n",
+      "          | Mission.Climb_GoAround\n",
+      "CDi_climb : 0.197                 Induced Drag Coefficient | Climb\n",
+      "       CL : 2.1                   Lift Coefficient | Climb\n",
+      "Cd0_climb : 0.0172                Variation in Cd0\n",
+      "\n",
+      "          | Mission.Landing\n",
+      "  V_stall : 45.04         [m/s]   Target Stall Speed | Landing\n",
+      "\n",
       "          | Aircraft.Payload\n",
-      "        M : 1725          [kg]    Total Payload mass\n",
+      "        M : 708           [kg]    Total Payload mass\n",
       "M_luggage : 108           [kg]    Total Mass of luggage\n",
       "    M_pax : 600           [kg]    Total Mass of passengers + crew\n",
+      "\n",
+      "          | Mission.Climb\n",
+      "CDi_climb : 0.1647                Induced Drag Coefficient | Climb\n",
+      "       CL : 1.92                  Lift Coefficient | Climb\n",
+      "Cd0_climb : 0.01229               Variation in Cd0\n",
       "\n",
       "Fixed Variables\n",
       "---------------\n",
@@ -1190,21 +1178,12 @@
       "   Sw_Sref : 6                Wetted Area to Reference Area ratio\n",
       "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
       "\n",
-      "           | Mission.Landing\n",
-      "        FL : 1200    [m]      Field Length | Landing\n",
-      "SL_density : 1.225   [kg/m³]  Sea Level Density | Landing\n",
-      "         k : 0.5136  [ft/kt²] Landing Empirical Constant\n",
-      "\n",
-      "           | Mission.Climb_GoAround\n",
-      "   e_climb : 0.95             Variation in Oswald efficiency\n",
-      "\n",
-      "           | Mission.Climb\n",
-      "   e_climb : 0.95             Variation in Oswald efficiency\n",
-      "\n",
-      "           | Mission.Takeoff\n",
-      "        FL : 1200    [m]      Field Length\n",
-      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
-      "         k : 37.5    [ft³/lb] Some Random Constant\n",
+      "           | Mission.Cruise\n",
+      "         R : 2700    [km]     Cruise Range\n",
+      "     V_inf : 220     [m/s]    Cruising Velocity\n",
+      "       alt : 4e+04   [ft]     Altitude\n",
+      "       rho : 1.22    [kg/m³]  Density\n",
+      "     sigma : 0.246            Aggregate fuel fraction\n",
       "\n",
       "           | Mission.Cruise1\n",
       "         R : 2700    [km]     Cruise Range\n",
@@ -1213,32 +1192,84 @@
       "       rho : 1.22    [kg/m³]  Density\n",
       "     sigma : 0.246            Aggregate fuel fraction\n",
       "\n",
-      "           | Mission.Cruise\n",
-      "         R : 2700    [km]     Cruise Range\n",
-      "     V_inf : 220     [m/s]    Cruising Velocity\n",
-      "       alt : 4e+04   [ft]     Altitude\n",
-      "       rho : 1.22    [kg/m³]  Density\n",
-      "     sigma : 0.246            Aggregate fuel fraction\n",
-      "\n",
-      "           | Aircraft.Payload\n",
+      "           | Mission.Takeoff\n",
+      "        FL : 1200    [m]      Field Length\n",
       "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
-      " m_luggage : 27      [kg]     Assumed Luggage Weight\n",
-      "     m_pax : 100     [kg]     Assumed Passenger Weight\n",
+      "         k : 37.5    [ft³/lb] Some Random Constant\n",
+      "\n",
+      "           | Mission.Climb_GoAround\n",
+      "   e_climb : 0.95             Variation in Oswald efficiency\n",
+      "\n",
+      "           | Mission.Landing\n",
+      "        FL : 1200    [m]      Field Length | Landing\n",
+      "SL_density : 1.225   [kg/m³]  Sea Level Density | Landing\n",
+      "         k : 0.5136  [ft/kt²] Landing Empirical Constant\n",
       "\n",
       "           | Aircraft.Starboard_Engine\n",
       "         M : 1500    [kg]     Mass\n",
       "sfc_cruise : 0.8     [1/hr]   Specific Fuel Consumption at Cruise\n",
       "sfc_loiter : 0.7     [1/hr]   Specific Fuel Consumption at Loiter\n",
       "\n",
+      "           | Aircraft.Payload\n",
+      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
+      " m_luggage : 27      [kg]     Assumed Luggage Weight\n",
+      "     m_pax : 100     [kg]     Assumed Passenger Weight\n",
+      "\n",
       "           | Aircraft.Port_Engine\n",
       "         M : 1500    [kg]     Mass\n",
       "sfc_cruise : 0.8     [1/hr]   Specific Fuel Consumption at Cruise\n",
       "sfc_loiter : 0.7     [1/hr]   Specific Fuel Consumption at Loiter\n",
       "\n",
+      "           | Mission.Climb\n",
+      "   e_climb : 0.95             Variation in Oswald efficiency\n",
+      "\n",
+      "Variable Sensitivities\n",
+      "----------------------\n",
+      "           | Aircraft\n",
+      "      K_LD : -0.36   K_LD empirical coefficient | Civil Jets\n",
+      "   Sw_Sref : +0.18   Wetted Area to Reference Area ratio\n",
+      "\n",
+      "           | Aircraft.Payload\n",
+      "     m_pax : +0.16   Assumed Passenger Weight\n",
+      " m_luggage : +0.029  Assumed Luggage Weight\n",
+      "\n",
+      "           | Aircraft.Port_Engine\n",
+      "         M : +0.4    Mass\n",
+      "\n",
+      "           | Aircraft.Starboard_Engine\n",
+      "         M : +0.4    Mass\n",
+      "sfc_cruise : +0.36   Specific Fuel Consumption at Cruise\n",
+      "\n",
+      "           | Mission.Cruise\n",
+      "         R : +0.18   Cruise Range\n",
+      "     V_inf : -0.18   Cruising Velocity\n",
+      "\n",
+      "           | Mission.Cruise1\n",
+      "         R : +0.18   Cruise Range\n",
+      "     V_inf : -0.18   Cruising Velocity\n",
+      "\n",
       "Most Sensitive Constraints\n",
       "--------------------------\n",
       "       | Aircraft\n",
-      "    +1 : M_fuel ≥ 10\n",
+      "    +1 : M_dry ≥ .Payload.M + .Port_Engine.M + .Starboard_Engine.M\n",
+      "\n",
+      "       | Mission\n",
+      "    +1 : M[0] = M_0\n",
+      "    +1 : M[2] ≤ M[1]\n",
+      "\n",
+      "       | Mission.Takeoff\n",
+      "    +1 : M[1]/M[0] = 0.97\n",
+      "\n",
+      "       | Mission.Cruise\n",
+      "    +1 : M[2]/M[3] ≥ 1 + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))^1\n",
+      "           + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))²/2\n",
+      "           + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))³/6\n",
+      "           + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁴/24\n",
+      "           + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁵/120\n",
+      "           + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁶/720\n",
+      "           + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁷/5.04e+03\n",
+      "           + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁸/4.03e+04\n",
+      "           + (.R·Aircraft.Starboard_Engine.sfc_cruise/(.V_inf·.LD))⁹/3.63e+05\n",
       "\n"
      ]
     }
@@ -1266,7 +1297,7 @@
     {
      "data": {
       "text/plain": [
-       "<gpkit.interactive.sankey.Sankey at 0x7f7ae416eca0>"
+       "<gpkit.interactive.sankey.Sankey at 0x7f1429d610d0>"
       ]
      },
      "execution_count": 7,
