Just realised we've been going about this wrong
Co-authored-by: Cooper <cp-changchien@users.noreply.github.com>

--- a/pyavd/gpkit_test.ipynb
+++ b/pyavd/gpkit_test.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/raihaan/Documents/GitHub/PyAVD/pyavd/Models/Performance/Stability.py:57: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?\n",
+      "  eval_at_M0 = 4.44(K_a * K_lambda * K_h * np.sqrt(np.cos(wing_sweep))) ** (1.19)\n"
+     ]
+    }
+   ],
    "source": [
     "from gpkit import Model, ureg\n",
     "from gpkit.interactive.sankey import Sankey\n",
@@ -198,47 +207,47 @@
        "data": [
         {
          "ids": [
-          "Aircraft.Payload",
-          "Mission.Cruise1",
-          "Aircraft.Port_Engine",
-          "Aircraft",
+          "Mission",
           "Mission.Cruise",
           "Mission.Takeoff",
-          "Mission.Climb_GoAround",
           "Mission.Climb",
-          "Mission",
-          "Mission.Landing",
+          "Aircraft",
           "Aircraft.Starboard_Engine",
+          "Mission.Cruise1",
+          "Mission.Climb_GoAround",
+          "Aircraft.Payload",
+          "Aircraft.Port_Engine",
+          "Mission.Landing",
           "Model",
           ""
          ],
          "labels": [
-          "Payload",
-          "Cruise1",
-          "Port_Engine",
-          "Aircraft",
+          "Mission",
           "Cruise",
           "Takeoff",
-          "Climb_GoAround",
           "Climb",
-          "Mission",
-          "Landing",
+          "Aircraft",
           "Starboard_Engine",
+          "Cruise1",
+          "Climb_GoAround",
+          "Payload",
+          "Port_Engine",
+          "Landing",
           "Model",
           ""
          ],
          "parents": [
-          "Aircraft",
-          "Mission",
-          "Aircraft",
           "Model",
           "Mission",
           "Mission",
           "Mission",
-          "Mission",
           "Model",
+          "Aircraft",
+          "Mission",
           "Mission",
           "Aircraft",
+          "Aircraft",
+          "Mission",
           "",
           "Model"
          ],
@@ -1087,7 +1096,7 @@
       "Using solver 'cvxopt'\n",
       " for 30 free variables\n",
       "  in 66 posynomial inequalities.\n",
-      "Solving took 0.137 seconds.\n",
+      "Solving took 0.168 seconds.\n",
       "Solution check warning: Primal solution violates constraint: 1.0152284273202685 is greater than 1\n",
       "\n",
       "Optimal Cost\n",
@@ -1281,12 +1290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from gpkit.interactive.references import referencesplot\n",
-    "referencesplot(M, openimmediately=False)"
+    "referencesplot(M, openimmediately=True)"
    ]
   },
   {
@@ -1297,7 +1306,7 @@
     {
      "data": {
       "text/plain": [
-       "<gpkit.interactive.sankey.Sankey at 0x7f1429d610d0>"
+       "<gpkit.interactive.sankey.Sankey at 0x7f3f79335f10>"
       ]
      },
      "execution_count": 7,
