bunch of updates

--- a/pyavd/gpkit_test.ipynb
+++ b/pyavd/gpkit_test.ipynb
@@ -13,11 +13,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/raihaan/Documents/GitHub/PyAVD/pyavd/Models/Performance/Stability.py:57: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?\n",
-      "  eval_at_M0 = 4.44(K_a * K_lambda * K_h * np.sqrt(np.cos(wing_sweep))) ** (1.19)\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<parse_variables>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/raihaan/.local/lib/python3.8/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3441\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"/tmp/ipykernel_212124/1904429337.py\"\u001b[0m, line \u001b[1;32m5\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from Models import *\n",
+      "  File \u001b[1;32m\"/home/raihaan/Documents/GitHub/PyAVD/pyavd/Models/__init__.py\"\u001b[0m, line \u001b[1;32m1\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from .Components import *\n",
+      "  File \u001b[1;32m\"/home/raihaan/Documents/GitHub/PyAVD/pyavd/Models/Components/__init__.py\"\u001b[0m, line \u001b[1;32m1\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from .Aircraft import Aircraft, AircraftPerformance\n",
+      "  File \u001b[1;32m\"/home/raihaan/Documents/GitHub/PyAVD/pyavd/Models/Components/Aircraft.py\"\u001b[0m, line \u001b[1;32m3\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from .Wing          import *\n",
+      "  File \u001b[1;32m\"/home/raihaan/Documents/GitHub/PyAVD/pyavd/Models/Components/Wing.py\"\u001b[0m, line \u001b[1;32m48\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    class Wing(Model):\n",
+      "  File \u001b[1;32m\"/home/raihaan/Documents/GitHub/PyAVD/pyavd/Models/Components/Wing.py\"\u001b[0m, line \u001b[1;32m63\u001b[0m, in \u001b[1;35mWing\u001b[0m\n    def setup(self):\n",
+      "  File \u001b[1;32m\"/home/raihaan/anaconda3/envs/RocketPy/lib/python3.8/site-packages/gpkit/tools/docstring.py\"\u001b[0m, line \u001b[1;32m104\u001b[0m, in \u001b[1;35m__call__\u001b[0m\n    new_ast = ast.parse(new_src, \"<parse_variables>\")\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/raihaan/anaconda3/envs/RocketPy/lib/python3.8/ast.py\"\u001b[0;36m, line \u001b[0;32m47\u001b[0;36m, in \u001b[0;35mparse\u001b[0;36m\u001b[0m\n\u001b[0;31m    return compile(source, filename, mode, flags,\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<parse_variables>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    lambda = self.lambda = Variable('lambda', 9.1, 'deg', 'Wing Sweep')  # from 'lambda      9.1            [deg]       Wing Sweep'\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
