--- a/tests/Stability Analyses/stabilty.ipynb
+++ b/tests/Stability Analyses/stabilty.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "K_f: 1.6\n",
-      "6.689249411740649 meter\n",
-      "20.177563483095554 dimensionless\n",
-      "21.177563483095554 dimensionless\n",
-      "0.41655092693102835 dimensionless\n",
-      "1.5070211624441143 / radian\n"
+     "ename": "TypeError",
+     "evalue": "__init__() missing 10 required positional arguments: 'wing_alpha0', 'wing_iw', 'tail_alpha0', 'cl_delta_e', 'wing_cm0_af', 'wing_twist', 'oswald_wing', 'oswald_tailplane', 'tail_AR', and 'aircraft_Cd0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_25859/2710567296.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     58\u001b[0m \"\"\"\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m stab = Stability(\n\u001b[0m\u001b[1;32m     61\u001b[0m     \u001b[0maircraft_x_cg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0mwing_qc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 10 required positional arguments: 'wing_alpha0', 'wing_iw', 'tail_alpha0', 'cl_delta_e', 'wing_cm0_af', 'wing_twist', 'oswald_wing', 'oswald_tailplane', 'tail_AR', and 'aircraft_Cd0'"
      ]
     }
    ],
@@ -24,30 +23,41 @@
     "from gpkit import ureg as u\n",
     "\n",
     "from Stability import *\n",
+    "from Performance import *\n",
     "\n",
-    "\n",
-    "l_h = 7.05 * u.m\n",
-    "h_h = 4.5 * u.m\n",
+    "# TODO: THIS IS ONLY FOR CRUISE! do for landing + takeoff (prob just change x_cg and lift curve slopes)\n",
+    "l_h = 6.8 * u.m\n",
+    "h_h = 4 * u.m\n",
     "aircraft_x_cg = 6.32 * u.m\n",
     "x_np = 0.0 * u.m\n",
     "wing_b = 13 * u.m\n",
     "wing_AR = 9\n",
-    "wing_qc = 6.50 * u.m\n",
+    "wing_qc = 6.40 * u.m\n",
     "fuselage_length = 13.5 * u.m\n",
     "fuselage_width = 2.0 * u.m\n",
     "wing_c = 1.83 * u.m\n",
     "wing_taper = 0.32\n",
     "wing_S = 22 * u.m**2\n",
-    "wing_sweep = 9.1 * u.deg\n",
+    "wing_sweep = 9.1 * u.deg # for cm0_w sweep is of the 1/4 c position!\n",
     "wing_cl_alpha = 6.4968 * (1/u.rad)\n",
     "eta_h = 1\n",
     "S_h = 6.503 * u.m**2\n",
     "compressibility_correction = 1.31\n",
-    "CL_alpha_h = 4.09 * 1/u.rad\n",
-    "x_ac_h = 14 * u.m\n",
+    "CL_alpha_h = 3.72 * 1/u.rad\n",
+    "x_ac_h = 13 * u.m\n",
+    "wing_alpha0 = -1.8 * u.deg\n",
+    "wing_iw = 2 * u.deg\n",
+    "tail_alpha0 = 0 * u.deg\n",
     "\n",
-    "'''\n",
-    "    aircraft_x_cg,\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "'wing_alpha0', 'wing_iw', 'tail_alpha0', 'cl_delta_e', 'wing_cm0_af', 'wing_twist', 'oswald_wing', 'oswald_tailplane', 'tail_AR', and 'aircraft_Cd0'\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "  aircraft_x_cg,\n",
     "    wing_qc,\n",
     "    x_aerocenter_tail,\n",
     "    l_h,\n",
@@ -64,9 +74,18 @@
     "    eta_h,\n",
     "    S_h,\n",
     "    CL_alpha_h,\n",
-    "    compressibility_correction\n",
-    "'''\n",
-    "\n",
+    "    compressibility_correction,\n",
+    "    wing_alpha0,\n",
+    "    wing_iw,\n",
+    "    tail_alpha0,\n",
+    "    cl_delta_e,\n",
+    "    wing_cm0_af, # CM0_af is the incompressible airfoil zero lift pitching moment\n",
+    "    wing_twist,\n",
+    "    oswald_wing,\n",
+    "    oswald_tailplane,\n",
+    "    tail_AR,\n",
+    "    aircraft_Cd0\n",
+    "\"\"\"\n",
     "\n",
     "stab = Stability(\n",
     "    aircraft_x_cg,\n",
@@ -89,15 +108,57 @@
     "    compressibility_correction\n",
     ")\n",
     "\n",
+    "# ac_stall_speed_takeoff = \n",
+    "# ac_stall_speed_landing = \n",
+    "# aircraft_Cd0_landing = \n",
+    "# aircraft_Cd0_takeoff = \n",
+    "# aircraft_Cl_ground = \n",
+    "# aircraft_Cl_landing = \n",
+    "# aircraft_Cl_max_clean = \n",
+    "# Cl_climb = \n",
+    "# wing_oswald = \n",
+    "# aircraft_W0_S =\n",
+    "# aircraft_W_S_landing = \n",
+    "# aircraft_ground_AoA = \n",
+    "# aircraft_takeoff_AoA = \n",
+    "# h_obs_takeoff = 10.668\n",
+    "# h_obs_landing = 10.668\n",
+    "# engine_BPR = \n",
+    "# n_engines = 2\n",
     "\n",
+    "\"\"\"\n",
+    "        ac_stall_speed_takeoff,\n",
+    "        ac_stall_speed_landing,\n",
+    "        aircraft_Cd0,\n",
+    "        aircraft_Cl_ground,\n",
+    "        aircraft_CL_landing,\n",
+    "        aicraft_Cl_max_clean,\n",
+    "        Cl_climb,\n",
+    "        wing_AR,\n",
+    "        wing_oswald,\n",
+    "        aircraft_W0_S,\n",
+    "        aircraft_W_S_landing,\n",
+    "        aircraft_ground_AoA,\n",
+    "        aircraft_takeoff_AoA,\n",
+    "        h_obs_takeoff,\n",
+    "        h_obs_landing,\n",
+    "        engine_BPR,\n",
+    "        n_engines,\n",
+    "        aircraft_W0,\n",
+    "        aircarft_Wlanding,\n",
+    "        aircraft_LoverD_takeoff,\n",
+    "        ac_reverse_thrust,\n",
+    "        ac_wheel_braking,\n",
+    "        T_max,\n",
+    "        static_T_takeoff,\n",
+    "        dragOEI_evaluated_at_Vcl,\n",
+    "        aircraft_T0_W0,\n",
+    "        takeoff_density \n",
+    "\"\"\"\n",
+    "# perf = Performance(\n",
     "\n",
-    "print(stab.x_np)\n",
-    "print(stab.SM_Poff)\n",
-    "print(stab.SM_Pon)\n",
-    "print(stab.depsilon_dalpha)\n",
-    "print(stab.dCM_dalpha)\n",
-    "\n",
-    "# cruise = []\n"
+    "# )\n",
+    "\n"
    ]
   }
  ],
